Changed Output Text Message

--- a/client/index.html
+++ b/client/index.html
@@ -54,7 +54,7 @@
                 </select>
               </div>
             </div>
-            <label for="targetText">Message</label>
+            <label for="targetText">Translated Text</label>
             <textarea class="u-full-width" placeholder="Kia ora …" id="targetText" disabled></textarea>
           </div>
         </div>
